# cost-monitor

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  alembic.ini  debug_dashboard.py  debug_dashboard_callback.py  debug_pydantic.py  debug_service_query.py  deploy.sh  docker-compose.yml  fix_dashboard_error_handling.py  health_check.py  pyproject.toml  requirements-dashboard.txt  requirements-data-service.txt  requirements.txt  setup.py  test_all_azure_subscriptions.py  test_api_azure.py  test_azure_comprehensive.py  test_azure_provider.py  test_azure_sample_subscriptions.py  test_azure_simple.py  test_azure_subscription.py  test_dashboard_fix.py  test_new_azure_provider.py  test_pool_01_400.py  test_pool_01_high_numbers.py
.github/workflows/: ci.yml
alembic/: env.py
assets/: custom.css
config/: .secrets.yaml.template  README.md  config.example.yaml  config.yaml  development.yaml  docker.yaml  icinga-monitoring.yaml  production.yaml  redis_cache_config.yaml
config/dashboard/: dashboard.yaml
database/: add_aws_accounts_table.sql
dockerfiles/: Dockerfile.dashboard  Dockerfile.data-service
docs/: .GCP_SETUP.md.swp  API.md  AWS_PERMISSIONS.md  AZURE_SETUP.md  CLI.md  CONFIGURATION.md  DASHBOARD.md  DEPLOYMENT.md  DEVELOPMENT.md  DEV_SCRIPT.md  GCP_SETUP.md  GRAFANA_PROMETHEUS_SETUP.md  MONITORING.md  OAUTH-SETUP.md  TESTING.md  TROUBLESHOOTING.md
entrypoints/: dashboard-entrypoint.sh  data-service-entrypoint.sh
openshift/: DEPLOYMENT.md  local-config.template.yaml
openshift/base/: kustomization.yaml
openshift/base/auth/: kustomization.yaml  oauth-proxy.yaml  oauth-rbac.yaml  oauth-routes.yaml  oauth-secrets.yaml
openshift/base/buildconfigs/: buildconfigs.yaml
openshift/base/configmaps/: app-config.yaml  postgresql-config.yaml  redis-config.yaml
openshift/base/cronjobs/: data-collection.yaml  prometheus-export.yaml
openshift/base/deployments/: cost-data-service.yaml  dashboard-deployment.yaml  dashboard-service.yaml  data-refresh-cronjob.yaml  persistent-volumes.yaml  postgresql.yaml  redis.yaml
openshift/base/routes/: routes.yaml  routes.yaml.backup
openshift/base/secrets/: credentials.template.yaml
openshift/base/security/: network-policies.yaml  security-context.yaml
openshift/base/services/: services.yaml
openshift/overlays/development/: clusterrolebinding.yaml  kustomization.yaml
openshift/overlays/local-template/: kustomization.yaml  routes-patch.yaml
openshift/overlays/production/: clusterrolebinding.yaml  kustomization.yaml  pod-disruption-budgets.yaml
openshift/overlays/staging/: kustomization.yaml
scripts/: commit-msg-lint.sh  dev-local-to-ocp.sh  dev.sh  health_check.py  quality-check.sh
src/: __init__.py  main.py
src/api/: aws_accounts.py  dashboard_service.py  data_service.py  models.py
src/api/services/: cost_service.py
src/auth/: __init__.py  openshift_groups.py
src/config/: __init__.py  settings.py
src/export/: __init__.py  prometheus.py
src/jobs/: collect_historical_data.py
src/models/: __init__.py
src/monitoring/: __init__.py  alerts.py  icinga.py  text_alerts.py
src/providers/: __init__.py  aws.py  azure.py  azure_csv_service.py  base.py  gcp.py
src/utils/: __init__.py  auth.py  cache.py  data_normalizer.py  http_client.py
src/visualization/: __init__.py  dashboard.py  dashboard_new.py
src/visualization/dashboard/: __init__.py  __main__.py  app.py  core.py  data_manager.py  layout.py  themes.py  utils.py
src/visualization/dashboard/callbacks/: __init__.py  aws_breakdown.py  charts.py  data_store.py  interactions.py  tables.py
src/visualization/dashboard/components/: __init__.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_cost_service.py  test_dashboard_integration.py  test_database_integration.py  test_end_to_end.py
tests/unit/test_providers/: test_base.py
tests/unit/test_pydantic_models/: test_alert_models.py  test_basic_models.py  test_cost_models.py  test_data_models.py
