[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-monitor"
version = "1.0.0"
description = "Multi-cloud cost monitoring tool for AWS, Azure, and GCP"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cost Monitor Team", email = "cost-monitor@company.com"}
]
maintainers = [
    {name = "Cost Monitor Team", email = "cost-monitor@company.com"}
]
keywords = ["cloud", "cost", "monitoring", "aws", "azure", "gcp", "billing", "icinga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Framework :: Dash",
]
requires-python = ">=3.11"

# Core dependencies
dependencies = [
    # Cloud SDKs
    "boto3>=1.34.0",
    "google-cloud-billing>=1.12.0",
    "google-cloud-bigquery>=3.4.0",
    "azure-identity>=1.15.0",
    "azure-storage-blob>=12.19.0",

    # Configuration management
    "dynaconf>=3.2.0",

    # Web dashboard and visualization
    "plotly>=5.17.0",
    "dash>=2.16.0",
    "dash-bootstrap-components>=1.5.0",

    # HTTP and async support
    "requests>=2.31.0",
    "aiohttp>=3.9.0",

    # API framework and server
    "fastapi>=0.128.0",
    "uvicorn>=0.35.0",

    # Database and caching
    "asyncpg>=0.31.0",
    "redis>=6.2.0",
    "diskcache>=5.6.3",

    # Data processing
    "pandas>=2.1.0",
    "python-dateutil>=2.8.2",

    # Error handling and retries
    "tenacity>=8.2.3",

    # CLI argument parsing
    "click>=8.1.7",

    # Logging
    "structlog>=23.2.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "vulture>=2.10.0",
    "ruff>=0.1.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",  # For FastAPI testing
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

# All optional dependencies
all = [
    "cost-monitor[dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/rhpds/cost-monitor"
Documentation = "https://github.com/rhpds/cost-monitor/blob/main/README.md"
Repository = "https://github.com/rhpds/cost-monitor.git"
Issues = "https://github.com/rhpds/cost-monitor/issues"
Changelog = "https://github.com/rhpds/cost-monitor/blob/main/CHANGELOG.md"

[project.scripts]
cost-monitor = "src.main:cli"
cost-monitor-dashboard = "src.main:dashboard"
cost-monitor-icinga = "src.monitoring.icinga:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md"]

# Black code formatting
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
no_implicit_reexport = true
show_error_codes = true
exclude = "src/visualization/dashboard/__init__.py"

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "google.*",
    "azure.*",
    "plotly.*",
    "dash.*",
    "dash_bootstrap_components.*",
    "redis.*",
    "asyncpg.*",
    "structlog.*",
    "tenacity.*",
    "dynaconf.*",
    "diskcache.*",
    "click.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Vulture dead code detection
[tool.vulture]
min_confidence = 90
ignore_names = [
    # Dash callback parameters - required by framework but not directly used
    "*_clicks",
    "n_intervals",
    # Common unused variables
    "args",
    "kwargs",
]
ignore_decorators = [
    "@callback",
    "@dash.callback",
    "@app.route",
    "@click.command",
    "@click.option",
    "@click.argument",
]
paths = ["src"]

# Ruff linting (modern replacement for flake8)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # pep8-naming
    "C90", # mccabe complexity
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise within except without from
]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["B008"]  # Click decorators use function calls in defaults
"tests/*.py" = ["B011"]   # assert false in tests is ok

[tool.ruff.lint.mccabe]
max-complexity = 12
